gcc/testsuite/rust/rustc/ui/error-codes/e0119/issue-27403.rs
pub struct GenX<S> {
    inner: S,
}

impl<S> Into<S> for GenX<S> { // { dg-error ".E0119." "" { target *-*-* } }
    fn into(self) -> S {
        self.inner
    }
}

fn main() {}

